# ExcerptArchivist

./: .gitignore  :w  Cargo.toml  README.md
.github/workflows/: clippy.yml
backend/: Cargo.toml
backend/migrations/: 20230815193531_excerpts.sql
backend/prisma/: schema.prisma
backend/src/: lib.rs  main.rs
backend/src/api/: mod.rs  routes.rs
backend/src/api/objects/: requests.rs  responses.rs
backend/src/db/: models.rs
backend/src/models/: mod.rs  prisma.rs
backend/src/models/prisma_ext/: excerpt.rs  mod.rs
backend/src/routes/: browse.rs
migrations/: 20230809195830_excerpts.sql
prisma-cli/: Cargo.toml
src/: main.rs
