[package]
name = "excerpt-archivist"
authors = ["Proudmuslim <proudmuslim-dev@protonmail.com>"]
license = "GPL-3.0"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prisma-client-rust = { workspace = true }

# TODO: Decide webserver

[dependencies.color-eyre]
version = "0.5"
default-features = false

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["full"]
