[package]
name = "excerpt-archivist"
authors = ["Proudmuslim <proudmuslim-dev@protonmail.com>"]
license = "GPL-3.0"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async_once = "0.2.6"
lazy_static = "1.4.0"
paste = "1.0.14"

prisma-client-rust = { workspace = true }

[dependencies.rocket]
version = "0.5.0-rc.3"
features = ["json"]

[dependencies.color-eyre]
version = "0.5"
default-features = false

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["full"]
