[package]
name = "excerpt-archivist"
authors = ["Proudmuslim <proudmuslim-dev@protonmail.com>"]
license = "GPL-3.0"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async_once = "0.2.6"
futures = "0.3.28"
lazy_static = "1.4.0"
paste = "1.0.14"

[dependencies.sqlx]
version = "0.6"
features = ["runtime-tokio-rustls", "sqlite"]

[dependencies.poem] 
version = "1.3"
features = ["eyre06", "prometheus"]

[dependencies.poem-openapi]
version = "3"
features = ["swagger-ui"]

[dependencies.color-eyre]
version = "0.6.2"
default-features = false

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["full"]
